# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.
#
# Copyright 2026 Edgecast Cloud LLC.

[package]
name = "rebalancer-adm"
version = "0.1.0"
edition.workspace = true
description = "CLI for managing rebalancer jobs"

[lints]
workspace = true

[[bin]]
name = "rebalancer-adm"
path = "src/main.rs"

[dependencies]
rebalancer-manager-client = { path = "../../clients/internal/rebalancer-manager-client" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
