# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.
#
# Copyright 2026 Edgecast Cloud LLC.

[package]
name = "sapi-cli"
version = "2.1.3"
edition.workspace = true
description = "CLI for Triton SAPI (Services and Configuration API)"

[lints]
workspace = true

[[bin]]
name = "sapi"
path = "src/main.rs"

[dependencies]
sapi-api = { path = "../../apis/sapi-api" }
sapi-client = { path = "../../clients/internal/sapi-client" }
clap = { workspace = true, features = ["env"] }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
