# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.
#
# Copyright 2026 Edgecast Cloud LLC.

[package]
name = "tcadm"
version = "0.1.0"
edition.workspace = true
description = "Operator CLI for the Triton Cloud control plane"

[lints]
workspace = true

[[bin]]
name = "tcadm"
path = "src/main.rs"

[build-dependencies]
chrono = { workspace = true }

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dialoguer = { workspace = true }
dirs = { workspace = true }
flate2 = "1"
hex = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "rustls"] }
# We construct the rustls ClientConfig ourselves and pass it via
# Client::use_preconfigured_tls so we can substitute the Mozilla
# webpki-roots trust store for reqwest's default
# rustls-platform-verifier. That verifier looks for a system trust
# store and fails on illumos with "No CA certificates were loaded
# from the system." Bundling Mozilla roots is consistent across
# mac / linux / illumos and removes the platform-trust-store
# dependency entirely.
webpki-roots = { workspace = true }
rpassword = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
triton-channel = { workspace = true }
tritond-client = { workspace = true }
# Out-of-workspace path dep: lives in the sibling `manta-storage` repo. Used
# by `tcadm workspace quota` to talk to mantad's `/admin/v1/workspaces/{name}/quota`
# surface directly. Kept as a path dep because the two repos co-evolve.
mantad-client = { path = "../../../manta-storage/crates/mantad-client" }
uuid = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
chrono = { workspace = true }
dropshot = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tritond = { workspace = true }
tritond-audit = { workspace = true }
tritond-auth = { workspace = true }
tritond-store = { workspace = true }
