# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.
#
# Copyright 2026 Edgecast Cloud LLC.

[package]
name = "triton-cli"
version = "1.0.0"
edition.workspace = true
description = "User-friendly CLI for Triton CloudAPI"

[lints]
workspace = true

[[bin]]
name = "triton"
path = "src/main.rs"

[dependencies]
triton-auth = { workspace = true }
cloudapi-client = { workspace = true }
cloudapi-api = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
comfy-table = { workspace = true }
dialoguer = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
getrandom = { workspace = true }
rpassword = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
strum = { workspace = true }

# TLS certificate fallback for platforms where native cert probing fails (e.g., illumos)
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
rustls-pemfile = { workspace = true }
webpki-roots = { workspace = true }

# VNC proxy dependencies
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
axum = { workspace = true }
tempfile = { workspace = true }

[build-dependencies]
build-data = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }    # CLI testing with command assertions
predicates = { workspace = true }    # Fluent assertions for stdout/stderr
test-case = { workspace = true }     # Parameterized tests
pretty_assertions = { workspace = true } # Better diff output for test failures
hostname = { workspace = true }      # Get hostname for unique test resource names
regex = { workspace = true }         # Regex for extracting UUIDs from output
rcgen = { workspace = true }         # Self-signed certs for TLS tests
tokio-rustls = { workspace = true }  # TLS server for insecure-mode tests
