# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.
#
# Copyright 2026 Edgecast Cloud LLC.

[package]
name = "triton-cli"
version = "1.0.0"
edition.workspace = true
description = "User-friendly CLI for Triton CloudAPI"

[lints]
workspace = true

[[bin]]
name = "triton"
path = "src/main.rs"

[dependencies]
triton-auth = { workspace = true }
triton-tls = { workspace = true }
triton-gateway-client = { workspace = true }
cloudapi-api = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
comfy-table = { workspace = true }
dialoguer = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
getrandom = { workspace = true }
rpassword = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
strum = { workspace = true }

# TLS certificate fallback for platforms where native cert probing fails (e.g., illumos)
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
rustls-native-certs = "0.8"
rustls-pemfile = "2"
webpki-roots = "1"

# VNC proxy dependencies
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
axum = { workspace = true }
tempfile = { workspace = true }

# Relay bridge dependencies
yamux = { workspace = true }
tokio-util = { workspace = true }
triton-relay-protocol = { workspace = true }

[build-dependencies]
build-data = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
test-case = { workspace = true }
pretty_assertions = { workspace = true }
hostname = { workspace = true }
regex = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
