# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.
#
# Copyright 2026 Edgecast Cloud LLC.

[package]
name = "triton-relay-bridge"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[[bin]]
name = "triton-relay-bridge"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
triton-relay-protocol = { workspace = true }
yamux = { workspace = true }

[build-dependencies]
build-data = { workspace = true }
