# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.
#
# Copyright 2026 Edgecast Cloud LLC.

[package]
name = "tritonadm"
version = "0.1.0"
edition.workspace = true
description = "CLI for Triton datacenter administration (Rust successor to sdcadm)"

[lints]
workspace = true

[[bin]]
name = "tritonadm"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
bytes = "1"
clap = { workspace = true, features = ["derive", "env"] }
clap_complete = "4.4"
futures-util = "0.3"
imgapi-api = { path = "../../apis/imgapi-api" }
imgapi-client = { path = "../../clients/internal/imgapi-client" }
mahi-api = { path = "../../apis/mahi-api" }
mahi-client = { path = "../../clients/internal/mahi-client" }
mahi-sitter-client = { path = "../../clients/internal/mahi-sitter-client" }
sapi-client = { path = "../../clients/internal/sapi-client" }
napi-client = { path = "../../clients/internal/napi-client" }
papi-client = { path = "../../clients/internal/papi-client" }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
triton-tls = { path = "../../libs/triton-tls" }
uuid = { workspace = true }
vmapi-client = { path = "../../clients/internal/vmapi-client" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
