# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.
#
# Copyright 2026 Edgecast Cloud LLC.

[package]
name = "tritoncloud-publish"
version = "0.1.0"
edition.workspace = true
description = "Publish Triton Cloud release artifacts (zone images, agent tarballs, tcadm binaries) to Manta and update the signed channel manifest at ~~/public/tritoncloud/channels/<channel>.json."

[lints]
workspace = true

[[bin]]
name = "tritoncloud-publish"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
# Full-featured minisign (signing). Used in-process so we can read
# MINISIGN_PASSWORD from env or prompt via rpassword, rather than
# shelling to `minisign -S` which insists on a TTY for the passphrase
# and refuses to read env vars.
minisign = "0.9"
rpassword = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
triton-channel = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
