# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.
#
# Copyright 2026 Edgecast Cloud LLC.

[package]
name = "tritonctl"
version = "0.1.0"
edition.workspace = true
description = "Tenant CLI for Triton Cloud: self-service instances, disks, networking, and images"

[lints]
workspace = true

[[bin]]
name = "tritonctl"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dialoguer = { workspace = true }
rpassword = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
triton-cli-core = { workspace = true }
tritond-client = { workspace = true }
uuid = { workspace = true }
